Refactor register & implement create and edit action for task (domain, repository, service & controller)